# riddance

./: .gitignore  README.md  hatch.toml  pyproject.toml
.github/workflows/: pylint.yml
src/riddance/: __init__.py  __main__.py  cli.py  commands.py  identifiers.py  options.py  os_info.py  utils.py  version.py
src/riddance/distro/: utils.py
src/riddance/distro/fedora/: utils.py
src/riddance/distro/fedora/fl_38_we_gnome/: packages.py  utils.py
src/riddance/distro/fedora/fl_39_we_gnome/: packages.py  utils.py
src/riddance/fedora/: core.py  options.py  packages.py  privacy.py  utils.py
src/riddance/fedora/fl_38_we_gnome/: packages.py  privacy_settings.py  utils.py
src/riddance/fedora/fl_39_we_gnome/: packages.py  privacy_settings.py  utils.py
src/riddance/fedora/gnome/: core.py  options.py  packages.py  privacy.py  privacy_settings.py  utils.py
src/riddance/fedora/gnome/fl_38_we/: packages.py  utils.py
src/riddance/fedora/gnome/fl_39_we/: packages.py  utils.py
src/riddance/fedora/gnome/we_38/: packages.py
src/riddance/fedora/gnome/we_39/: packages.py
src/riddance/os/: fedora.py
src/riddance/sys/: linux.py
src/riddance/sys/os/: fedora.py
src/riddance/sys/os/distro/: utils.py
src/riddance/sys/os/distro/fedora/: __init__.py
src/riddance/sys/os/distro/fedora/fl_38_we_gnome/: utils.py
src/riddance/sys/os/distro/fedora/fl_39_we_gnome/: utils.py
src/riddance/sys/os/fl38we_gnome/: utils.py
src/riddance/sys/os/fl39we_gnome/: utils.py
