[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "riddance"
description = "A tool designed to remove bloatware and restore freedom"
requires-python = ">= 3.12.1"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Rylan Justice" }]
keywords = ["python", "privacy", "debloat", "riddance"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Operating System",
]
dynamic = ["readme", "version"]

[project.urls]
Repository = "https://github.com/rylan-justice/riddance"

[tool.hatch.version]
path = "src/riddance/__init__.py"
